update pj-sortable-tiles (bower); use Gear icon to open the editor (closes #35)

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -15,37 +15,48 @@
 <template>
   <!-- <link rel="stylesheet" href="pj-dashboard.css"> -->
   <style>
+    :host {
+      display: flex;
+    }
 
     #container {
-        display: flex;
-        display: -webkit-flex;
+      display: flex;
+      display: -webkit-flex;
 
-       	-webkit-flex-direction: column; 
-	    flex-direction: column;
+      -webkit-flex-direction: column;
+      flex-direction: column;
 
-	    -webkit-flex: 0 1 auto;
-    	flex: 0 1 auto;
-
-        width:100%;
-        height:100%;
-
+      -webkit-flex: 1 1 auto;
+      flex: 1 1 auto;
     }
 
     polymer-ui-toolbar {
-        -webkit-flex: none;
-        flex: none;
+      -webkit-flex: 1 1 auto;
+      flex: 1 1 auto;
+    }
+
+    #top {
+      display: flex;
+      display: -webkit-flex;
+
+      -webkit-flex-direction: column;
+      flex-direction: column;
+
+      -webkit-flex: 0 1 auto;
+      flex: 0 1 auto;
+
+      z-index: 100;
     }
 
     #main {
-        display: flex;
-        display: -webkit-flex;
+      display: flex;
+      display: -webkit-flex;
 
-        -webkit-flex: 1 0 auto;
-        flex: 1 0 auto;
+      -webkit-flex: 1 1 auto;
+      flex: 1 1 auto;
 
-       	-webkit-flex-direction: row; 
-	    flex-direction: row;
-
+      -webkit-flex-direction: row;
+      flex-direction: row;
     }
 
 
@@ -93,22 +104,19 @@
 
     #elementSettings {
         box-sizing:border-box;
-        -webkit-flex: 0 0 0px;
-        flex: 0 0 0px;
+        -webkit-flex: 1 1 auto;
+        flex: 1 1 auto;
 
-        visibility:collapse;
-
-        padding-left:20px;
-        padding-right:20px;
+        padding:10px 20px;
 
         background-color: #eee;
-
     }
 
   </style>
 
     <div id="container">
 
+        <div id="top">
         <polymer-ui-toolbar   theme="launcher-theme" class="launcher-theme" defaulttheme="polymer-ui-light-theme">
             <a href="/"><polymer-ui-icon-button icon="menu"></polymer-ui-icon-button></a>
             <polymer-ui-field class="launcher-theme">
@@ -116,56 +124,19 @@
                 <input placeholder="Search" value="{{search}}" update-on="input"/>
             </polymer-ui-field>
             <polymer-ui-icon-button id="account" icon="account"></polymer-ui-icon-button>
-            <polymer-ui-icon-button id="settings" icon="settings"></polymer-ui-icon-button>
+            <polymer-ui-icon-button id="settings" icon="settings" on-click="{{toggleEditingMode}}"></polymer-ui-icon-button>
         </polymer-ui-toolbar>
        
         <polymer-ui-dropdown id="dropdown">
             <polymer-ui-menu-item icon="settings">Settings</polymer-ui-menu-item>
             <polymer-ui-menu-item icon="close">Log out</polymer-ui-menu-item>
         </polymer-ui-dropdown>
-        
-        <div id="elementSettings">
-            <p>Element Settings</p><p style="color:red">NOTE: Not implemented!</p>
 
-            <table>
-                <tbody>
-                    <tr>
-                        <td>Gap</td>
-                        <td>123</td>
-                        <td><button>Inc</button></td>
-                        <td><button>Dec</button></td>
-                    </tr>
-                    <tr>
-                        <td>Width</td>
-                        <td>123</td>
-                        <td><button>Inc</button></td>
-                        <td><button>Dec</button></td>
-                    </tr>
-                    <tr>
-                        <td>Height</td>
-                        <td>123</td>
-                        <td><button>Inc</button></td>
-                        <td><button>Dec</button></td>
-                        <td>Auto <input type="checkbox"/></td>
-                    </tr>
-                    <tr>
-                        <td>Priority</td>
-                        <td>1</td>
-                        <td><button>Inc</button></td>
-                        <td><button>Dec</button></td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td><button>Save</button></td>
-                        <td><button>Close</button></td>
-                    </tr>
-                </tbody>
-            </table>
+        <template if="{{editingMode}}">
+          <div id="elementSettings">
+            <pj-sortable-tiles-editor sortableTilesSelector="pj-sortable-tiles"></pj-sortable-tiles-editor>
+          </div>
+        </template>
 
         </div>
 
@@ -190,7 +161,7 @@
 <script>
     Polymer('pj-dashboard', {
         data: null,
-        isSettingsOpen: false,
+        editingMode: false,
 
         ready: function () {
             console.info("dataChanged", this, arguments)
@@ -212,21 +183,10 @@
             }.bind(this));
 
             this.$.settings.addEventListener('tap', function () {
-                this.isSettingsOpen = !this.isSettingsOpen;
+                this.editingMode = !this.editingMode;
+                document.querySelector("pj-sortable-tiles").editingMode = this.editingMode;
             }.bind(this));
 
-        },
-        isSettingsOpenChanged: function (oldValue, newValue) {
-            if (newValue) {
-                // Show settings menu
-                this.$.elementSettings.style.flex = "1 0 auto";
-                this.$.elementSettings.style.visibility = "visible";
-            }
-            else {
-                // Hide settings menu
-                this.$.elementSettings.style.flex = "0 0 0px";
-                this.$.elementSettings.style.visibility = "collapse";
-            }
         }
 
 
