--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -15,6 +15,7 @@
     <link rel="import" href="/vendor/model-operations/model-operations.html">
     <link rel="import" href="/vendor/tomalec-sortable-list/src/tomalec-sortable-list.html">
     <link rel="import" href="/vendor/pj-sortable-tiles/src/pj-sortable-tiles.html">
+    <link rel="import" href="/vendor/pj-sortable-tiles/src/pj-sortable-tiles-editor.html">
     <link rel="import" href="/vendor/warpech-display-router/warpech-display-router.html">
 
     <link rel="stylesheet" href="/css/style.css">
