fix styling of SuperCRM Company

--- a/Apps/SuperCRM/Client/SuperCRM.html
+++ b/Apps/SuperCRM/Client/SuperCRM.html
@@ -1,6 +1,11 @@
 <link rel="import" href="components/puppet-morphUrl.html">
 
 <template bind="{{SuperCRM}}">
+  <style>
+    h1 {
+      margin: 0;
+    }
+  </style>
     <h1>SuperCRM</h1>
     <template if="{{Message}}">
         <h2>{{Message}}</h2>
