upgrade pj-sortable-tiles (bower)

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -1,4 +1,4 @@
-﻿<link rel="import" href="../../vendor/polymer/polymer.html">
+<link rel="import" href="../../vendor/polymer/polymer.html">
 <link rel="import" href="../../vendor/polymer-ui-icon/polymer-ui-icon.html" />
 <link rel="import" href="../../vendor/polymer-ui-icon-button/polymer-ui-icon-button.html" />
 <link rel="import" href="../../vendor/polymer-ui-menu-button/polymer-ui-menu-button.html" />
@@ -134,7 +134,7 @@
 
         <template if="{{editingMode}}">
           <div id="elementSettings">
-            <pj-sortable-tiles-editor sortableTilesSelector="pj-sortable-tiles"></pj-sortable-tiles-editor>
+            <pj-sortable-tiles-editor selectionMode></pj-sortable-tiles-editor>
           </div>
         </template>
 
