--- a/Apps/Noise/Client/noise.html
+++ b/Apps/Noise/Client/noise.html
@@ -1,3 +1,3 @@
 ﻿<template bind="{{Noise}}">
-  <div style="background: #eee">noise</div>
+  <!--<div style="background: #eee">noise</div>-->
 </template>
