company logo here

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -13,6 +13,7 @@
         }
     </style>
 
+  <h1>Logo here</h1>
 
             <div class="launcher-labeled-input">
                 <input id="Name$" type='text' value='{{ Name$ }}' placeholder='<Name>'>
