Updated the style of "Skyper" and 'SuperCRM' Companies and Contacts

--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -15,7 +15,7 @@
 <template bind="{{Skyper}}">
 
     <section class="Skyper">
-        <h1>Friends list</h1>
+        <!--<h1>Friends list</h1>-->
         <template repeat="{{ Friends }}">
             <template is="imported-template" content="{{ Html }}"></template>
         </template>
