--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -1,37 +1,44 @@
 ﻿
-
 <template bind="{{SuperCRM}}">
+
     <style>
-        h1 input {
+        /*h1 input {
             font-size: 0.9em;
         }
+
         .company {
             background: yellow;
         }
+
         .contacts {
             border: 2px dashed black;
-        }
+        }*/
+
     </style>
 
-  <h1>Logo here</h1>
+    <h1>Logo here</h1>
 
-            <div class="launcher-labeled-input">
-                <input id="Name$" type='text' value='{{ Name$ }}' placeholder='<Name>'>
-                <label for="Name$">Name</label>
-            </div>
 
-            <div class="launcher-labeled-input">
-                <input id="Revenue$" type='text' value='{{ Revenue$ }}' placeholder='<Revenue>'>
-                <label for="Revenue$">Revenue</label>
-            </div>
+    <div class="launcher-labeled-input">
+        <input id="Name$" type='text' value='{{ Name$ }}' placeholder='<Name>'>
+        <label for="Name$">Name</label>
+    </div>
 
-        <div class="contacts">
-            <h2>Contacts</h2>
-           <template repeat="{{ Contacts }}">
-              <template is="imported-template" content="{{ Html }}"></template>
-           </template>
-           <button class="launcher-button" style="background-color:#184259" onclick="getModel(this).AddContact$ = null">Add a contact in {{Name$}}</button>
-        </div>
-        <button class="launcher-button" style="background-color:#11653B" onclick="getModel(this).Save$ = null">Save</button>
-        <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
+    <div class="launcher-labeled-input">
+        <input id="Revenue$" type='text' value='{{ Revenue$ }}' placeholder='<Revenue>'>
+        <label for="Revenue$">Revenue</label>
+    </div>
+
+    <div class="SuperCRM-Contacts">
+        <h1><i class="icon-adult"></i><span class="i-name">Contacts</span></h1>
+
+        <template repeat="{{ Contacts }}">
+            <template is="imported-template" content="{{ Html }}"></template>
+        </template>
+        <button class="launcher-button" style="background-color:#184259" onclick="getModel(this).AddContact$ = null">Add a contact in {{Name$}}</button>
+    </div> 
+
+    <button class="launcher-button" style="background-color:#11653B" onclick="getModel(this).Save$ = null">Save</button>
+    <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
+
 </template>
