Changed the label and placeholder for the skype name.

--- a/Apps/Skyper/Client/skyper-user.html
+++ b/Apps/Skyper/Client/skyper-user.html
@@ -29,8 +29,8 @@
             <div >
 
                 <div class="launcher-labeled-input">
-                    <input id="Name$" type='text' value='{{ Contact.SkypeId$ }}' placeholder='&lt;Username&gt;'>
-                    <label for="Name$">Username</label>
+                    <input id="Name$" type='text' value='{{ Contact.SkypeId$ }}' placeholder='&lt;Skype-name&gt;'>
+                    <label for="Name$">Skype-name</label>
                 </div>
 
                 <button class="launcher-button" onclick="getModel(this).Save$ = null">OK</button><!--text input will remain on screen until https://github.com/Starcounter/Starcounter/issues/1871 is fixed-->
