--- a/Apps/SuperCRM/Client/SuperCRM.html
+++ b/Apps/SuperCRM/Client/SuperCRM.html
@@ -10,6 +10,8 @@
         <h2>{{Message}}</h2>
     </template>
     <template bind="{{FavoriteCustomer}}">
+      <pj-sortable-tiles id="pj-sortable-tile:{{Html}}" disabled>
         <template is="imported-template" content="{{Html}}"></template>
+      </pj-sortable-tiles>
     </template>
 </template>
