--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -51,13 +51,13 @@
       </div>
       <template bind="{{ results }}">
         <!-- FIXME: hardcoded priority -->
-        <pj-sortable-tiles class="workspace launcher" id="pj-sortable-tile:{{Html}}" disabled cellWidth="128" cellHeight="32">
+        <pj-sortable-tiles class="workspace launcher" id="pj-sortable-tile:{{Html}}" disabled>
           <template is="imported-template" content="{{ Html }}"></template>   
         </pj-sortable-tiles>
       </template>
         <template repeat="{{ workspaces }}">
         <warpech-display-route match-path="^\/launcher\/workspace\/{{appName}}\/" display-selector=".workspace.{{appName}}"></warpech-display-route>
-        <pj-sortable-tiles class="workspace {{appName}}" id="pj-sortable-tile:{{master.Html}}" disabled cellWidth="128" cellHeight="32">
+        <pj-sortable-tiles class="workspace {{appName}}" id="pj-sortable-tile:{{master.Html}}" disabled>
             <template bind="{{ master }}">
                 <template is="imported-template" content="{{ Html }}"></template>  
             </template> 
