switch to juicy-tiles, juicy-tiles-editor

--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -17,9 +17,9 @@
     <section class="Skyper">
         <!--<h1>Friends list</h1>-->
         <template repeat="{{ Friends }}">
-	        <pj-sortable-tiles id="pj-sortable-tile:{{Html}}" disabled>
+	        <juicy-tiles id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{ Html }}"></template>
-        	</pj-sortable-tiles>
+        	</juicy-tiles>
         </template>
     </section>
 
