--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -7,9 +7,9 @@
     <div class="Skyper">
         <h1>Skyper</h1>
         <template bind="{{MyOnlyFriend}}">
-	        <pj-sortable-tiles id="pj-sortable-tile:{{Html}}" disabled>
+	        <juicy-tiles id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{Html}}"></template>
-        	</pj-sortable-tiles>
+        	</juicy-tiles>
         </template>
     </div>
 
