add "+ More..." button to reproduce issue #77

--- a/Apps/SuperCRM/Client/search.html
+++ b/Apps/SuperCRM/Client/search.html
@@ -30,7 +30,7 @@
         <h1><i class="icon-industrial-building"></i><span class="i-name">Companies</span></h1>
 
         <!-- List of Companies -->
-        <ul>
+        <ul id="companies">
             <template repeat="{{Companies}}">
                     <li><a href="{{Uri}}">{{Name}}
 
@@ -41,5 +41,24 @@
                         </a></li>
             </template>
         </ul>
+
+        <span id="more-companies" class="fake-link">+ New company...</span>
+
+        <style>
+          .fake-link:hover {
+            text-decoration: underline;
+            cursor: default;
+          }
+        </style>
+
+        <script>
+          document.getElementById('more-companies').addEventListener('click', function() {
+            for (var i = 0; i < 5; i++) {
+              var li = document.createElement('LI');
+              li.innerHTML = '<a href="#">Fake Company</a>';
+              document.getElementById('companies').appendChild(li);
+            }
+          });
+        </script>
     </div>
 </template>
