Update dependencies (bower):
Polymer 0.3.1
Polymer-ui-* 0.3.0
Juicy/juicy-tile-list@1f9f13437c (juicy-tiles)
Juicy/juicy-tiles-editor@fb0ad961b9
Juicy/juicy-popover@a3d94375ca

Removed tomalec-sortable-list

--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -7,9 +7,9 @@
     <div class="Skyper">
         <h1>Skyper</h1>
         <template bind="{{MyOnlyFriend}}">
-	        <juicy-tiles id="juicy-tile:{{Html}}" disabled>
+	        <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{Html}}"></template>
-        	</juicy-tiles>
+        	</juicy-tile-list>
         </template>
     </div>
 
