--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -17,9 +17,9 @@
     <section class="Skyper">
         <!--<h1>Friends list</h1>-->
         <template repeat="{{ Friends }}">
-	        <juicy-tiles id="juicy-tile:{{Html}}" disabled>
+	        <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{ Html }}"></template>
-        	</juicy-tiles>
+        	</juicy-tile-list>
         </template>
     </section>
 
