--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -33,9 +33,9 @@
         <h1><i class="icon-adult"></i><span class="i-name">Contacts</span></h1>
 
         <template repeat="{{ Contacts }}">
-            <juicy-tiles id="juicy-tile:{{Html}}" disabled>
+            <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
                 <template is="imported-template" content="{{ Html }}"></template>
-            </juicy-tiles>
+            </juicy-tile-list>
         </template>
         <button class="launcher-button" style="background-color:#184259" onclick="getModel(this).AddContact$ = null">Add a contact in {{Name$}}</button>
     </div> 
