bower update (juicy-tile-editor)

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -135,7 +135,7 @@
 
         <template if="{{editingMode}}">
           <div id="elementSettings">
-            <juicy-tiles-editor selectionMode></juicy-tiles-editor>
+            <juicy-tile-editor selectionMode></juicy-tile-editor>
           </div>
         </template>
 
