update to use <link is="juicy-redirect">; update to PuppetJS 0.1.10 (bower)

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -41,6 +41,6 @@
     </div> 
 
     <button class="launcher-button" style="background-color:#11653B" onclick="getModel(this).Save$ = null">Save</button>
-    <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
+    <link is="juicy-redirect" history url="{{ RedirectUrl$ }}">
 
 </template>
