--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -39,5 +39,5 @@
 
     <button class="launcher-button" style="background-color:#11653B" onclick="getModel(this).Save$ = null">Save</button>
 
-    <puppet-morphUrl url="{{ RedirectUrl$ }}"></puppet-morphUrl>
+    <link is="juicy-redirect" history url="{{ RedirectUrl$ }}">
 </template>
