Update dependencies (bower):
Juicy/juicy-tile-grid@2b3fd11630
Juicy/juicy-tile-list@b6e1b7812b
Juicy/juicy-tile-editor@3668b84d2b
PuppetJs/PuppetJs@0.1.11
Juicy/imported-template@2b30fc49c7
web-animations/web-animations-js@4bcf8f706b

--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -17,9 +17,9 @@
     <section class="Skyper">
         <!--<h1>Friends list</h1>-->
         <template repeat="{{ Friends }}">
-	        <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
+	        <juicy-tile-grid id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{ Html }}"></template>
-        	</juicy-tile-list>
+        	</juicy-tile-grid>
         </template>
     </section>
 
