--- a/Apps/SuperCRM/Client/SuperCRM.html
+++ b/Apps/SuperCRM/Client/SuperCRM.html
@@ -10,8 +10,8 @@
         <h2>{{Message}}</h2>
     </template>
     <template bind="{{FavoriteCustomer}}">
-      <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
+      <juicy-tile-grid id="juicy-tile:{{Html}}" disabled>
         <template is="imported-template" content="{{Html}}"></template>
-      </juicy-tile-list>
+      </juicy-tile-grid>
     </template>
 </template>
