--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -7,9 +7,9 @@
     <div class="Skyper">
         <h1>Skyper</h1>
         <template bind="{{MyOnlyFriend}}">
-	        <juicy-tile-list id="juicy-tile:{{Html}}" disabled>
+	        <juicy-tile-grid id="juicy-tile:{{Html}}" disabled>
 	            <template is="imported-template" content="{{Html}}"></template>
-        	</juicy-tile-list>
+        	</juicy-tile-grid>
         </template>
     </div>
 
