Switch to still not 100% stable tiles-grid editor Juicy/juicy-tile-editor@8585c7f454
Update Juicy/juicy-tile-list@f7cbba1681

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -141,7 +141,7 @@
 
         <template if="{{editingMode}}">
           <div id="elementSettings">
-            <juicy-tile-editor selectionMode></juicy-tile-editor>
+            <juicy-tile-editor selectionMode watchedTagNames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']"></juicy-tile-editor>
           </div>
         </template>
 
